# JNIHelper

./: CMakeLists.txt  LICENSE  README.md
JNIHelper/: CMakeLists.txt
JNIHelper/include/: JniCallbackHelper.hpp  JniFields.hpp  JniHelper.hpp  JniParam.hpp  Test.h  globals.hpp
JNIHelper/src/: JniCallbackHelper.cpp  JniFields.cpp  JniHelper.cpp  _JNICaller.cpp  _JNICaller.hpp  _JniCallbackHelper.hpp  _JniFields.hpp  _JniHelper.hpp  globals.cpp
JNITest/: CMakeLists.txt
scripts/: Build.py  BuildTool.py  DownloadLibs.py
